# Prep

./: .bandit.yml  .env  .env.demo  .env.development.template  .env.example  .env.production.template  .env.staging  .gitignore  .gitleaks.toml  .npmrc  .pre-commit-config.yaml  AGENTS.md  API.md  BUG_AND_INTEGRATION_REPORT_2025-11-19.md  BUG_AUDIT_AND_FIX_SUMMARY_2025-11-17.md  BUG_AUDIT_QUICK_REFERENCE.md  BUG_FIXES_SUMMARY.md  BUG_HUNT_REPORT_2025-11-11.md  BUG_SCAN_EXECUTIVE_SUMMARY.md  BUG_SCAN_INDEX.md  CALIFORNIA_STATE_COMPLIANCE_IMPLEMENTATION.md  CHANGELOG.md  CITY_COMPLIANCE_IMPLEMENTATION.md  CLAUDE.md  CODEBASE_REVIEW_COMPLETE.md  CODE_QUALITY_ANALYSIS.md  CODE_QUALITY_FIXES.md  CODE_QUALITY_ISSUES_DETAILS.md  CODE_QUALITY_SCAN_2025-11-11.md  COMPREHENSIVE_BUG_AUDIT_REPORT_2025-11-17.md  COMPREHENSIVE_BUG_HUNT_REPORT_2025-11-11.md  COMPREHENSIVE_BUG_SCAN_REPORT.md  CONFIG_AUDIT_REPORT.md  CONFIG_ISSUES_SUMMARY.txt  CONTRIBUTING.md  CRITICAL_BUGS_EXECUTIVE_SUMMARY.md  CRITICAL_BUGS_HUNTING_LIST.md  DEPLOYMENT.md  DEPLOYMENT_MEMO.md  DEVELOPER_ONBOARDING.md  (+89 more)
.claude/: CONTEXT.md  SYSTEM_PROMPT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  project-prep-operational.yaml  pull_request_template.md
.husky/: pre-commit
agents/: README.md  __init__.py
aiosqlite/: __init__.py
api/: index.py  space_optimizer.py
app/: layout.tsx  page.tsx
apps/monitor/: main.py  pyproject.toml
auto_projection_bot/: __init__.py  core.py
backend/: .env  package.json  sample_data.sql  schema.sql
ci/: docker-healthcheck.sh
codex/: README.md  __init__.py  config.py  constraints.md  database.py  municipal_delta_compliance_sprint.yaml  op_readiness_onboarding_sprint.yaml
components/: Header.tsx  PhotoUpload.tsx
config/: feature-flags.demo.json
contracts/: city.yaml
dags/: foodcode_ingest.py  pricing_hourly_refresh.py  reg_ingest.py
data/: __init__.py  cli.py
demo/: README.md  checkout.html  dashboard.html  index.html  kitchen.html
docs/: AGENT_SWARM.md  AGENT_SWARM_QUICK_REFERENCE.md  API_VERSIONING_POLICY.md  CI_FAILURE_TRACKING.md  CI_FAILURE_TRACKING_QUICKSTART.md  CI_FAILURE_TRACKING_SUMMARY.md  CRITICAL_BUG_FIXES_2025-11-16.md  DEMO_SETUP.md  DISASTER_RECOVERY_RUNBOOK.md  ENHANCED_AGENT_SWARM_QUICK_REFERENCE.md  GITHUB_ISSUES_MASTER.md  GITHUB_ISSUES_QUICKSTART.md  GOLDEN_PATH_DEMO.md  IMPLEMENTATION_STATUS_2025-11-16.md  MICROSERVICES_SECURITY_SCANNING.md  MVP_85_VERTICAL_SLICE.md  MVP_CRITICAL_PATH.md  MVP_HAPPY_PATH_IMPLEMENTATION.md  MVP_IMPLEMENTATION_GUIDE.md  MVP_VERTICAL_SLICE_COMPLETE.md  OPS_HANDBOOK.md  PAYMENTS_ARCHITECTURE.md  PHASE_0_AUDIT_REPORT.md  PHASE_0_VALIDATION_SUMMARY.md  PREP_MVP_IMPLEMENTATION_PLAN.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCT_SPINE.md  PROJECT_TICKETS.md  SESSION_SUMMARY_2025-11-16.md  SLO.md  WEEK_0_COMPLETION_SUMMARY.md  architecture.md  codex_execution_pattern.md  compliance_engine.md  etl_crawler.md  growth_alpha_epics.md  integration_audit.md  phase19.md  phase1_api_catalog_schema.md  post_mvp_service_extraction.md  (+6 more)
dol_reg_compliance_engine/: core.py
etl/: __init__.py  crawler.py  loader.py  parser.py
frontend/: index.html  package.json
gaap_ledger_porter/: core.py
gdpr_ccpa_core/: core.py
harborhomes/: .env.example  .gitignore  README.md  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
hbs_model_validator/: core.py
integrations/: __init__.py  docusign_client.py
jobs/: __init__.py  expiry_check.py  integration_health_worker.py  pricing_hourly_refresh.py  qsr_automations_sync.py  reconciliation_engine.py  regression.py  sf_etl.py  space_optimizer_train.py  staffing_sync.py
k8s/: backup-cronjob.yaml
lib/: logger.ts  stripe.ts  types.ts
libs/: __init__.py  safe_import.py
load/: k6_bookings.js
lse_impact_simulator/: core.py
middleware/: __init__.py  audit_logger.py  rate_limiter.py  request_validation.js  request_validation.py  request_validation.test.js  request_validation_extended.test.js
migrations/: 002_prisma_schema.sql  003_create_bookings_table.sql  003_seed_data.sql  004_add_audit_fields.sql  005_add_audit_logs.sql  006_create_checklist_templates.sql  006_create_mv_host_metrics.sql  006_create_reg_docs.sql  006_create_verification_tasks_table.sql  007_create_pos_tables.sql  008_municipal_permits_zoning_inspections.sql  009_municipal_insurance_coi.sql  010_municipal_fees_taxes_deposits.sql  011_facility_safety_ada_grease.sql  012_calendars_maintenance_seasonal.sql  013_emergency_waste_complaints.sql  014_sf_compliance_and_tax_tables.sql  add_compliance_fields.sql  init.sql  regulatory_tables.sql  verification_tasks.sql
mocks/: __init__.py  gov_portals_mock.py  stripe_mock.py
modules/: README.md  __init__.py  integration.py  observability.py
monitoring/: alerts.yaml
multivoice_compliance_ui/: core.py
perf/: README.md  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/prep_sdk/: __init__.py  client.py  types.py
sdk/python/prep_sdk/api/: __init__.py
sdk/python/prep_sdk/api/city/: __init__.py  list_city_fees.py  list_city_requirements.py
sdk/python/prep_sdk/api/requirements/: __init__.py  create_requirement_estimate.py
sdk/python/prep_sdk/models/: __init__.py  error_response.py  fee.py  fee_collection.py  requirement.py  requirement_collection.py  requirement_due_payload.py  requirement_due_webhook.py  requirement_estimate_request.py  requirement_estimate_response.py  requirement_status_payload.py  requirement_status_webhook.py
(+1463 files in other folders)
