[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prep"
version = "0.1.0"
description = "Prep – Enterprise Compliance Orchestration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Prep Platform Automation" }]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110.0",
  "SQLAlchemy>=2.0.30",
  "sqlalchemy[asyncio]>=2.0.29",
  "httpx>=0.25.0",
  "pyjwt>=2.9.0",
  "pyyaml>=6.0.0",
  "python-dateutil>=2.9.0",
  "pydantic>=2.5.0",
  "pdf2image>=1.17.0",
  "pillow>=9.0.0",
  "pytesseract>=0.3.10",
  "uvicorn[standard]>=0.29.0",
  "redis>=5.0.4",
  "asyncpg>=0.29.0",
  "stripe>=10.0.0",
  "boto3>=1.34.106,<1.35",
  "WeasyPrint>=62.0",
  "psycopg[binary]>=3.2.1",
  "aiokafka>=0.10.0",
  "prometheus-client>=0.20.0",
  "fpdf2>=2.7.9",
  "wiremock>=2.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.2",
  "pytest-json-report>=1.5.0",
  "hypothesis>=6.108.1",
  "ruff>=0.6.8",
  "mypy>=1.11.1",
]

[tool.setuptools]
packages = ["prep"]

[project.scripts]
prep-compliance = "prep.compliance.cli:main"

